# pyslurm

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml  slurm_executor.py
pyslurm/: __init__.py  slurm_executor.py
